Closed Bug 1528795 Opened 5 years ago Closed 5 years ago

Assertion failure: thisv.isUndefined() || thisv.isNull() with BigInt in js::ReportIncompatibleMethod

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: anba, Assigned: wingo)

References

Details

Attachments

(1 file)

Test case:

Function.prototype.call.call(0n)

Asserts with:

Assertion failure: thisv.isUndefined() || thisv.isNull(), at /home/andre/hg/mozilla-inbound/js/src/vm/JSFunction.cpp:2557

at https://searchfox.org/mozilla-central/rev/05d4b6962a571585bd679d2bbb0df0a5fb4e4eff/js/src/vm/JSFunction.cpp#2557.

Keywords: checkin-needed

Pushed by aciure@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ab1ddb62e120
Add BigInt case in ReportIncompatibleMethod debug assertions r=jandem

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Assignee: nobody → wingo
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: