Bug 1528795 - Add BigInt case in ReportIncompatibleMethod debug assertions r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D20306

--HG--
extra : moz-landing-system : lando